samples/_failures_safe/1761500958_0a14c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c93845c.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_5c93845c.c:146:13: error: expected declaration or statement at end of input
  146 |             result->data[j][i] = a->data[i][j];
      |             ^~~~~~
./samples/SAFE/__tmp_5c93845c.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c93845c.c:146:13: error: expected declaration or statement at end of input
